@@ -7,8 +7,8 @@
  * $Id$
  * 
  * Purpose:   This Mediawiki extension enables a user with the 'sysop' right
- * ========   to update a Mediawiki installation from a remote 'http' accessible
- *            code repository.
+ * ========   to update a Mediawiki installation from a remote 'ftp' accessible
+ *            code repository through the 'wget' system command.
  *
  * Features:
  * =========
@@ -33,7 +33,7 @@
  * - 
  *
  */
-global $wgAutoloadClasses;
+
 $wgAutoloadClasses['Updater'] = dirname(__FILE__) . "/UpdaterClass.php" ;
 $wgSpecialPages['Updater'] = 'Updater';
 
@@ -41,7 +41,7 @@ $wgExtensionCredits['specialpage'][] = array(
 	'name'        => 'Updater', 
 	'version'     => '$Id$',
 	'author'      => 'Jean-Lou Dupont', 
-	'description' => 'Updates a Mediawiki installation with http accessible files'
+	'description' => 'Updates a Mediawiki installation through "wget"'
 );
 
 ?>
